# AIA

./: .gitignore  README.md  config.py  create_workspace.sh  gateway.py  llm.py  main.py  pyproject.toml  schema.py
agent/: context.py  custom_agent.py  dynamic_tools_agent.py  no_tools_agent.py  runner.py  search_agent.py  session.py  skills_agent.py  tools_manager.py
agent/tools/: base.py  file.py  schema.py  shell.py  web.py
channels/: feishu.py
prompts/: assistant_select_prompt.py  vectordb_prompt.py
scripts/: download_embedding_model.sh
tests/agent/: test_runner.py  test_tools_manager.py
tests/utils/: test_filter_tools.py  test_md_utils.py  test_save_result.py
utils/: audio.py  filter_tools.py  helpers.py  llm.py  md_utils.py  message_queue.py  save_result.py  split_text.py  vectordb.py  web_search.py  write_test_code.py
workflow/: rag.py  rewrite.py  summary.py  video_to_text.py  wiki.py
